[package]
name = "rust-v8"
version = "0.1.0"
authors = ["kahgeh.tan <kahgeh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core={git = "https://github.com/denoland/deno", package="deno_core"}
log = "0.4.11"
futures = "0.3.8"
rusty_v8 = "0.13.0"
smallvec = "1.4.2"
tokio={version="1.0.0", features=["full"]}